<?xml version="1.0"?>
<package>
  <name>freespace_ros</name>
  <version>0.0.0</version>
  <description>Wrapper for the libfreespace library for ROS.</description>

  <maintainer email="amai@berkeley.edu">amai</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <license>TODO</license>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
